--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,10 @@
             <id>jitpack.io</id>
             <url>https://jitpack.io</url>
         </repository>
+        <repository>
+            <id>opencollab-repository-maven-snapshots</id>
+            <url>https://repo.opencollab.dev/maven-snapshots</url>
+        </repository>
     </repositories>
 
     <dependencies>
